--- a/bootstream/css/media-query.css
+++ b/bootstream/css/media-query.css
@@ -1,3 +1,59 @@
-@media only screen and (max-width:980px) {
-    
+@media screen and (max-width: 1200px) {
+    .product-div{
+        position: absolute;
+        left:50%;
+    }
+   
+}
+@media screen and (max-width: 1200px) {
+    .product-div{
+        position: absolute;
+        left:40%;
+    }
+   .robo{
+    margin-top:1%;
+    max-width: 50%;
+   }
+}
+@media screen and (max-width: 980px) {
+    .product-div{
+        position: absolute;
+        left:25%;
+    }
+   
+}
+@media screen and (max-width: 768px) {
+    .product-div {
+    position: absolute;
+    left: 14%;
+}
+   .robo{
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 20%;
+    width: 10
+   }
+}
+@media screen and (max-width: 540px) {
+    .product-div {
+        position: absolute;
+        left: 8%;
+        top: 25%;
+    }
+    .product-name {
+    margin-left: 25%;
+    float: left;
+}
+.product-div h2{
+    text-align: center;
+    margin-top: 6%;
+}
+.logo-div img{
+    top: 47px;
+    left: -41px;
+}
+.product-div a.eight {
+    top: 108%;
+}
 }
