--- a/botnew/css/test-master.css
+++ b/botnew/css/test-master.css
@@ -722,9 +722,6 @@ body {
     width: 100%;
     height: 100%;
   }
-  .botcopy .botcopy--bot-chat-window .botcopy--bot-header > div:nth-child(2) {
-    left: 14%;
-  }
 }
 
 @media only screen and (min-width: 320px) and (max-height: 568px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) {
@@ -3183,6 +3180,13 @@ textarea {
 }*/
 .botcopy--message-group{
   text-align: left;
+}
+@media screen and (max-width: 600px) {
+
+.botcopy .botcopy--bot-chat-window .botcopy--bot-header > div:nth-child(2) {
+  padding: 0 !important;
+  background: var(--bcHeaderFillColor) !important;
+}
 }
 
 /*# sourceMappingURL=master.css.map*/
