--- a/botnew/css/test-master.css
+++ b/botnew/css/test-master.css
@@ -821,11 +821,9 @@ body {
   }
 }
 @media screen and (max-width: 600px) {
-
 .botcopy .botcopy--bot-chat-window .botcopy--bot-header > div:nth-child(2) {
-  padding: 0 !important;
-  background: var(--bcHeaderFillColor) !important;
-}
+    left: 14%;
+  }
 }
 .botcopy .botcopy--bot-chat-window .botcopy--bot-header > div:nth-child(2) {
   padding: 0 !important;
