--- a/botnew/css/test-master.css
+++ b/botnew/css/test-master.css
@@ -2279,8 +2279,6 @@ textarea {
   font-family: var(--bcFontType), sans-serif;
   display: table;
   border-radius: 15px 15px 15px 0;
-  border: 1px solid #cec8c8;
-  padding:7px;
   margin-right: 100px;
   margin-left: 0.3em;
   min-height: 42px; /* should be the same as .typing-indicator min-height */
@@ -2289,7 +2287,11 @@ textarea {
 .botcopy .botcopy--bot-text-message > div {
   border-color: inherit;
 }
-
+.botcopy .botcopy--bot-text-message > div > div {
+  padding:7px;
+  border: 1px solid #cec8c8;
+}
+botcopy--bot-text-message
 .botcopy .botcopy--bot-text-message > div > div > div {
   border-color: inherit;
 }
