--- a/botnew/css/test-master.css
+++ b/botnew/css/test-master.css
@@ -3195,5 +3195,7 @@ botcopy--bot-text-message
     margin-right: 0 !important;
   }
 }
-
+button[data-reply="yes"]{
+  margin-left:10%;
+}
 /*# sourceMappingURL=master.css.map*/
