--- a/botnew/css/test-master.css
+++ b/botnew/css/test-master.css
@@ -3195,7 +3195,7 @@ botcopy--bot-text-message
     margin-right: 0 !important;
   }
 }
-[data-reply="yes"]{
+[data-value="yes"]{
   margin-left:10% !important;
 }
 /*# sourceMappingURL=master.css.map*/
