--- a/botnew/css/test-master.css
+++ b/botnew/css/test-master.css
@@ -2214,7 +2214,7 @@ textarea {
 
 .botcopy .botcopy--bot-chat-window .botcopy--bot-quickreplies {
   border-radius: 0;
-  float:left;
+  display:inline-block;
   background: var(--quickButtonBackground);
   border: 1.5px solid var(--quickButtonBorder);
   color: var(--quickTextColor);
